ajuste no font size

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 </head>
 
 <body>
-    <section class="hero is-success is-fullheight">
+    <section class="hero is-success is-fullheight ">
         <div class="hero-body">
             <div class="container has-text-centered">
                 <div class="column is-4 is-offset-4">
-                    <h3 class="title has-text-black">Login</h3>
+                    <h3 class="title has-text-black">Bem-vindo (a)</h3>
                     <hr class="login-hr">
                     <p class="subtitle has-text-black">Por favor, faça o login para prosseguir.</p>
                     <div class="box">
@@ -57,6 +57,8 @@
         </div>
     </section>
     <script async type="text/javascript" src="../js/bulma.js"></script>
+
+
 <!-- rodape -->
     <section class="hero is-small hero is-link">
         <div class="hero-body">
